--- a/public/css/telageral.css
+++ b/public/css/telageral.css
@@ -36,7 +36,7 @@ body {
 }
 
 .header-senai .nav-bar ul li{
-    margin: 15px;
+    margin: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,12 +46,12 @@ body {
     text-decoration: none;
     outline: none;
     color: #fff;
-    font-size: 20px;
-    padding: 0px 15px; 
+    font-size: 1.2vw;
+    padding: 0px 20px; 
 }
 
 .header-senai .nav-bar ul li a:hover{
-    transform: scale(1.1);
+    transform: scale(1.01);
     transition: 0.5s;
 }
 
@@ -121,3 +121,25 @@ h2 {
     background-color: #f9f9f9;
 }
 
+@media only screen and (max-width: 600px){
+    .nav-menu{
+        display: flex !important;
+        background-color: none;
+        width: 40px;
+        height: 30px;
+        flex-wrap: wrap;
+        align-content: space-between;
+    }
+    .nav-menu .barra-menu1, .barra-menu2, .barra-menu3{
+        height: 7px;
+        background-color: white;
+        border: solid 0px black;
+        border-radius: 10px;
+    }
+    .nav-bar {
+        display: none;
+    }
+    .header-senai{
+        flex-wrap: wrap !important;
+    }
+}
