--- a/public/css/telalogin.css
+++ b/public/css/telalogin.css
@@ -92,3 +92,9 @@ body{
 .links a:hover{
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 600px){
+    body{
+        flex-direction: column;
+    }
+}
