--- a/public/css/telageral.css
+++ b/public/css/telageral.css
@@ -15,6 +15,7 @@ body {
     padding: 20px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .header-senai {
@@ -25,6 +26,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 .header-senai span{
@@ -67,9 +69,9 @@ body {
 }
 
 .container {
-    width: 100%;
+    width: 50vw;
     max-width: 1200px;
-    margin: auto;
+    
 }
 
 h1,
